objects/BMCServiceDesk__BMC_ComputerSystem__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__AdminPasswordStatus__c</fullName>
        <label>Admin Password Status</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Implemented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BootROMSupported__c</fullName>
        <label>Boot ROM Supported</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CapabilityList__c</fullName>
        <label>Capability List</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ChassisBootupState__c</fullName>
        <label>Chassis Bootup State</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-recoverable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ConfigurationOptions__c</fullName>
        <label>Configuration Options</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DHCPUse__c</fullName>
        <label>DHCP Use</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DataRate__c</fullName>
        <label>Data Rate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Domain__c</fullName>
        <label>Domain</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EnvironmentSpecification__c</fullName>
        <label>Environment Specification</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ExpansionInterface__c</fullName>
        <label>Expansion Interface</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Expansion__c</fullName>
        <label>Expansion</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FirmwareVersion__c</fullName>
        <label>Firmware Version</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FlashMemory__c</fullName>
        <label>Flash Memory</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Frequency__c</fullName>
        <label>Frequency</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__HostName__c</fullName>
        <label>Host Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InputCurrent__c</fullName>
        <label>Input Current</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InputVoltage__c</fullName>
        <label>Input Voltage</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxConsumption__c</fullName>
        <label>Maximum Consumption</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MediaSupported__c</fullName>
        <label>Media Supported</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NumberOfSlots__c</fullName>
        <label>Number Of Slots</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OtherCapabilityDescription__c</fullName>
        <label>Other Capability Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PortsPerSlot__c</fullName>
        <label>Ports Per Slot</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PrimaryCapability__c</fullName>
        <label>Primary Capability</label>
        <picklist>
            <picklistValues>
                <fullName>Not Dedicated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Layer 3 Switch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Office Switch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firewall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I/O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Caching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Block Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>File Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile User Device</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridge/Extender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gateway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LoadBalancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mainframe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SANSwitch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SANHub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SANBridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SANRouter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SANDirectorRAIDStorageDevice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual Tape Library</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ResetCapability__c</fullName>
        <label>Reset Capability</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-recoverable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ResetCount__c</fullName>
        <label>Reset Count</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ResetLimit__c</fullName>
        <label>Reset Limit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SystemOID__c</fullName>
        <label>System OID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SystemType__c</fullName>
        <label>System Type</label>
        <picklist>
            <picklistValues>
                <fullName>X86-based PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIPS-based PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha-based PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power PCSH-x PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>StrongARM PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>64-bit Intel PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>64-bit Alpha PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X86-Nec98 PC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ThermalState__c</fullName>
        <label>Thermal State</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-recoverable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TotalPhysicalMemory__c</fullName>
        <label>Total Physical Memory</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__VirtualSystemType__c</fullName>
        <label>Virtual System Type</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VM/VM Guest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VMware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LDOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solaris Container</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP nPartitions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VPar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Hyper-V</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Workgroup__c</fullName>
        <label>Workgroup</label>
        <length>254</length>
        <type>Text</type>
    </fields>
</CustomObject>